--- a/src/main/webapp/pages/subsidiary/login.html
+++ b/src/main/webapp/pages/subsidiary/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>后台管理-登陆</title>
@@ -296,7 +296,7 @@
 <div class="main-body">
     <div class="login-main">
         <div class="login-top">
-            <span>人事管理系统后台登录</span>
+            <span th:text="#{login.title}"></span>
             <span class="bg1"></span>
             <span class="bg2"></span>
         </div>
@@ -304,34 +304,34 @@
             <div class="center">
                 <div class="item">
                     <span class="icon icon-2"></span>
-                    <input type="text" name="username" lay-verify="required" placeholder="请输入登录账号" maxlength="24"/>
+                    <input type="text" name="username" lay-verify="required" th:placeholder="#{login.username}" maxlength="24"/>
                 </div>
 
                 <div class="item">
                     <span class="icon icon-3"></span>
-                    <input type="password" name="password" lay-verify="required" placeholder="请输入密码" maxlength="20">
+                    <input type="password" name="password" lay-verify="required" th:placeholder="#{login.password}"  maxlength="20">
                     <span class="bind-password icon icon-4"></span>
                 </div>
 
                 <div id="validatePanel" class="item" style="width: 137px;">
-                    <input type="text" name="captcha" placeholder="请输入验证码" maxlength="4">
+                    <input type="text" name="captcha" th:placeholder="#{login.code}" maxlength="4">
                     <img id="refreshCaptcha" class="validateImg" src="/styles/images/captcha.jpg">
                 </div>
 
             </div>
             <div class="tip">
                 <span class="icon-nocheck"></span>
-                <span class="login-tip">保持登录</span>
-                <a href="javascript:" class="forget-password">忘记密码？</a>
+                <span class="login-tip" th:text="#{login.stay}"></span>
+                <a href="javascript:" class="forget-password" th:text="#{login.forget}"></a>
             </div>
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
-                <button class="login-btn" lay-submit="" lay-filter="login">立即登录</button>
+                <button class="login-btn" lay-submit="" lay-filter="login" th:text="#{login.now}"></button>
             </div>
         </form>
     </div>
 </div>
 <div class="footer">
-    ©版权所有 2014-2018 叁贰柒工作室<span class="padding-5">|</span><a target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16006642号-2</a>
+    [[#{login.footer}]]<span class="padding-5">|</span><a target="_blank"  href="http://www.miitbeian.gov.cn">[[#{login.number}]]</a>
 </div>
 <script src="/styles/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
 <script>
