--- a/src/main/webapp/pages/subsidiary/welcome.html
+++ b/src/main/webapp/pages/subsidiary/welcome.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <title>首页二</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../styles/lib/layui-v2.5.5/css/layui.css" media="all">
-    <link rel="stylesheet" href="../styles/lib/font-awesome-4.7.0/css/font-awesome.min.css" media="all">
-    <link rel="stylesheet" href="../styles/css/public.css" media="all">
+    <link rel="stylesheet" th:href="@{/styles/lib/layui-v2.5.5/css/layui.css}" media="all">
+    <link rel="stylesheet" th:href="@{/styles/lib/font-awesome-4.7.0/css/font-awesome.min.css}" media="all">
+    <link rel="stylesheet" th:href="@{/styles/css/public.css}" media="all">
     <style>
         .layui-card {
             border: 1px solid #f2f2f2;
@@ -263,7 +263,7 @@
                                             </a>
                                         </div>
                                         <div class="layui-col-xs3 layuimini-qiuck-module">
-                                            <a href="javascript:;" layuimini-content-href="page/404.html"
+                                            <a href="javascript:;" layuimini-content-href="/login"
                                                data-title="404页面" data-icon="fa fa-hourglass-end">
                                                 <i class="fa fa-hourglass-end"></i>
                                                 <cite>404页面</cite>
@@ -480,8 +480,8 @@
         </div>
     </div>
 </div>
-<script src="../lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-<script src="../js/lay-config.js?v=1.0.4" charset="utf-8"></script>
+<script th:src="@{/styles/lib/layui-v2.5.5/layui.js}" charset="utf-8"></script>
+<script th:src="@{/styles/js/lay-config.js?v=1.0.4}" charset="utf-8"></script>
 <script>
     layui.use(['layer', 'miniTab', 'echarts'], function () {
         var $ = layui.jquery,
