--- a/src/main/webapp/pages/subsidiary/forget.html
+++ b/src/main/webapp/pages/subsidiary/forget.html
@@ -24,49 +24,48 @@
                                         <label class="layui-form-label" th:text="#{forget.getback}"></label>
                                         <div class="layui-input-block">
                                             <select lay-verify="required">
-                                                <option value="1" selected th:text="#{forget.phone}"></option>
-                                                <option value="2" th:text="#{forget.mailbox}"></option>
+                                                <option value="1" disabled th:text="#{forget.phone}"></option>
+                                                <option value="2" selected th:text="#{forget.mailbox}"></option>
                                             </select>
                                         </div>
                                     </div>
-                                    <div th:fragment="first">
-                                        <div class="layui-form-item">
-                                            <label class="layui-form-label" th:text="#{forget.account}"></label>
-                                            <div class="layui-input-block">
-                                                <input type="text" th:placeholder="#{forget.fill}"
-                                                       class="layui-input account" lay-verify="phone"
-                                                       required="required"
-                                                       autocomplete="new-password"/>
-                                            </div>
+
+                                    <div class="layui-form-item">
+                                        <label class="layui-form-label" th:text="#{forget.account}"></label>
+                                        <div class="layui-input-block">
+                                            <input type="text" th:placeholder="#{forget.fill}"
+                                                   class="layui-input account" lay-verify="phone"
+                                                   required="required"
+                                                   autocomplete="new-password"/>
                                         </div>
-                                        <div class="layui-form-item">
-                                            <label class="layui-form-label" th:text="#{forget.set}"></label>
-                                            <div class="layui-input-block">
-                                                <input type="password" th:placeholder="#{forget.set_one}"
-                                                       class="layui-input password_1" lay-verify="pass"
-                                                       required="required"
-                                                       autocomplete="new-password"/>
-                                            </div>
+                                    </div>
+                                    <div class="layui-form-item">
+                                        <label class="layui-form-label" th:text="#{forget.set}"></label>
+                                        <div class="layui-input-block">
+                                            <input type="password" th:placeholder="#{forget.set_one}"
+                                                   class="layui-input password_1" lay-verify="pass"
+                                                   required="required"
+                                                   autocomplete="new-password"/>
                                         </div>
-                                        <div class="layui-form-item">
-                                            <label class="layui-form-label" th:text="#{forget.setAgain}"></label>
-                                            <div class="layui-input-block">
-                                                <input type="password" th:placeholder="#{forget.set_two}"
-                                                       class="layui-input password_2" lay-verify="pass"
-                                                       required="required"
-                                                       autocomplete="new-password"/>
-                                            </div>
+                                    </div>
+                                    <div class="layui-form-item">
+                                        <label class="layui-form-label" th:text="#{forget.setAgain}"></label>
+                                        <div class="layui-input-block">
+                                            <input type="password" th:placeholder="#{forget.set_two}"
+                                                   class="layui-input password_2" lay-verify="pass"
+                                                   required="required"
+                                                   autocomplete="new-password"/>
                                         </div>
-                                        <div class="layui-form-item">
-                                            <div class="layui-input-block">
-                                                <button class="layui-btn" lay-submit lay-filter="formStep"
-                                                        th:text="#{forget.next}"></button>
-                                            </div>
+                                    </div>
+                                    <div class="layui-form-item">
+                                        <div class="layui-input-block">
+                                            <button class="layui-btn" lay-submit lay-filter="formStep"
+                                                    th:text="#{forget.next}"></button>
                                         </div>
                                     </div>
                                 </form>
                             </div>
-                            <div th:fragment="scend">
+                            <div>
                                 <form class="layui-form" style="margin: 0 auto;max-width: 460px;padding-top: 40px;">
                                     <div class="layui-form-item">
                                         <label class="layui-form-label" th:text="#{forget.account}"></label>
@@ -128,136 +127,136 @@
     <script th:src="@{/styles/js/lay-config.js?v=1.0.4}" charset="utf-8"></script>
     <script type="text/javascript">
         //<![CDATA[
-    layui.use(['form', 'step'], function () {
-        var $ = layui.$;
-        var form = layui.form;
-        var step = layui.step;
-        var btn_getCode = false;
-        var account = $("select option:selected").val();
-        var verify;
+        layui.use(['form', 'step'], function () {
+            var $ = layui.$;
+            var form = layui.form;
+            var step = layui.step;
+            var btn_getCode = false;
+            var account = $("select option:selected").val();
+            var verify;
 
-        form.verify({
-            pass: [/^(?=.*[a-zA-Z])(?=.*\d)[^]{6,}$/, '[[#{forget.msgPasswordRules}]]']
-        })
+            form.verify({
+                pass: [/^(?=.*[a-zA-Z])(?=.*\d)[^]{6,}$/, '[[#{forget.msgPasswordRules}]]']
+            })
 
-        //下拉列表的选中事件
-        $(".layui-anim-upbit dd").on('click', function () {
-            account = $(this).attr("lay-value");
-            if (account == 1) {
-                verify = "phone";
-            } else {
-                verify = "email";
-            }
-            $('.account').attr("lay-verify", verify);
-        });
-
-        step.render({
-            elem: '#stepForm',
-            filter: 'stepForm',
-            width: '100%', //设置容器宽度
-            stepWidth: '750px',
-            height: '500px',
-            stepItems: [{
-                title: '[[#{forget.step_one}]]'
-            }, {
-                title: '[[#{forget.getcode}]]'
-            }, {
-                title: '[[#{forget.step_two}]]'
-            }]
-        });
-
-        form.on('submit(formStep)', function (data) {
-            if ($('.password_1').val() == $('.password_2').val()) {
-                //赋值给获取验证码的账号
-                $('.account_two').text($('.account').val());
-                step.next('#stepForm');
-            } else {
-                layer.msg("[[#{forget.msg_pass}]]");
-            }
-            return false;
-        });
-
-        form.on('submit(formStep2)', function (data) {
-            layer.msg("[[#{forget.codeMsg}]]")
-            //分布表单下一步
-            step.next('#stepForm');
-            return false;
-        });
-
-        $('.pre').click(function () {
-            //分布表单上一步
-            step.pre('#stepForm');
-        });
-
-        //获取验证码，一分钟内只能点击一次
-        $('.getCode').on('click', function () {
-            if (!btn_getCode) {
-                btn_getCode = true;
-                getcode($(this));
-                ajax($('.account_two').text());
-            } else {
-                return false;
-            }
-        })
-
-        $('.next').click(function () {
-            step.pre('#stepForm');
-        });
-
-        //前往登录
-        $('.land').click(function () {
-            window.location = 'login';
-        });
-
-        //点击事件
-        var getcode = function (date) {
-            //获取点击的对象
-            var obj = date;
-            //获取按钮的文本
-            var text = obj.text();
-            //给对象添加禁止点击
-            obj.addClass("layui-disabled");
-            var time = 59;
-            //定义一个每秒执行一次的事件
-            var timer = setInterval(function () {
-                var temp = time--;
-                //更改按钮的值
-                obj.text(text + ' (' + temp + "S)");
-                //判断是否已经结束了禁止点击的时间
-                if (temp <= 0) {
-                    btn_getCode = false;
-                    //移除禁止点击的效果
-                    obj.removeClass("layui-disabled");
-                    //改回按钮的值
-                    obj.text(text);
-                    //清除每秒执行的一次的事件
-                    clearInterval(timer);
-                    return;
+            //下拉列表的选中事件
+            $(".layui-anim-upbit dd").on('click', function () {
+                account = $(this).attr("lay-value");
+                if (account == 1) {
+                    verify = "phone";
+                } else {
+                    verify = "email";
                 }
-            }, 1000);
-        }
-        //发送异步请求，获取验证码
-        var ajax = function (user) {
-            $.ajax({
-                type: "GET",
-                url: "getCode",
-                dataType: "json", //预期服务器返回数据的类型
-                data: {user: user},
-                success: function (data) {
-                    if (data.success) {
-                        $("searchResult").html(data.msg);
-                    } else {
-                        $("#searchResult").html("出现错误：" + data.msg);
-                    }
-                },
-                error: function (msg) {
-                    alert("发生错误：" + msg.status);
+                $('.account').attr("lay-verify", verify);
+            });
+
+            step.render({
+                elem: '#stepForm',
+                filter: 'stepForm',
+                width: '100%', //设置容器宽度
+                stepWidth: '750px',
+                height: '500px',
+                stepItems: [{
+                    title: '[[#{forget.step_one}]]'
+                }, {
+                    title: '[[#{forget.getcode}]]'
+                }, {
+                    title: '[[#{forget.step_two}]]'
+                }]
+            });
+
+            form.on('submit(formStep)', function (data) {
+                if ($('.password_1').val() == $('.password_2').val()) {
+                    //赋值给获取验证码的账号
+                    $('.account_two').text($('.account').val());
+                    step.next('#stepForm');
+                } else {
+                    layer.msg("[[#{forget.msg_pass}]]");
+                }
+                return false;
+            });
+
+            form.on('submit(formStep2)', function (data) {
+                layer.msg("[[#{forget.codeMsg}]]")
+                //分布表单下一步
+                step.next('#stepForm');
+                return false;
+            });
+
+            $('.pre').click(function () {
+                //分布表单上一步
+                step.pre('#stepForm');
+            });
+
+            //获取验证码，一分钟内只能点击一次
+            $('.getCode').on('click', function () {
+                if (!btn_getCode) {
+                    btn_getCode = true;
+                    getcode($(this));
+                    ajax($('.account_two').text());
+                } else {
+                    return false;
                 }
             })
-        }
-    })
+
+            $('.next').click(function () {
+                step.pre('#stepForm');
+            });
+
+            //前往登录
+            $('.land').click(function () {
+                window.location = 'login';
+            });
+
+            //点击事件
+            var getcode = function (date) {
+                //获取点击的对象
+                var obj = date;
+                //获取按钮的文本
+                var text = obj.text();
+                //给对象添加禁止点击
+                obj.addClass("layui-disabled");
+                var time = 59;
+                //定义一个每秒执行一次的事件
+                var timer = setInterval(function () {
+                    var temp = time--;
+                    //更改按钮的值
+                    obj.text(text + ' (' + temp + "S)");
+                    //判断是否已经结束了禁止点击的时间
+                    if (temp <= 0) {
+                        btn_getCode = false;
+                        //移除禁止点击的效果
+                        obj.removeClass("layui-disabled");
+                        //改回按钮的值
+                        obj.text(text);
+                        //清除每秒执行的一次的事件
+                        clearInterval(timer);
+                        return;
+                    }
+                }, 1000);
+            }
+            //发送异步请求，获取验证码
+            var ajax = function (user) {
+                $.ajax({
+                    type: "GET",
+                    url: "getCode",
+                    dataType: "json", //预期服务器返回数据的类型
+                    data: {user: user},
+                    success: function (data) {
+                        if (data.success) {
+                            $("searchResult").html(data.msg);
+                        } else {
+                            $("#searchResult").html("出现错误：" + data.msg);
+                        }
+                    },
+                    error: function (msg) {
+                        alert("发生错误：" + msg.status);
+                    }
+                })
+            }
+        })
         // ]]>
-</script>
+    </script>
 </div>
 </body>
 </html>
